// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row allows additional classes to be passed through 1`] = `
<div>
  <div
    class="row test-class"
  />
</div>
`;

exports[`Row has a row class by default 1`] = `
<div>
  <div
    class="row "
  />
</div>
`;

exports[`Row renders correctly without props 1`] = `
<div>
  <div
    class="row "
  />
</div>
`;
